[workspace]
members = [
    "./temu-window"
]

[package]
name = "temu"
version = "0.1.0"
edition = "2021"

[dependencies]
temu-window = { path = "./temu-window" }

bytemuck = { version = "1.7.2", features = ["derive"] }
crossbeam-utils = "0.8.5"
env_logger = "0.9.0"
fps_counter = "2.0.0"
futures-executor = "0.3.17"
log = "0.4.14"
termwiz = "0.13.0"
wgpu = "0.11.0"

portable-pty = "0.5.0"
crossbeam-channel = "0.5.1"
rayon = "1.5.1"
etagere = "0.2.6"
ahash = "0.7.6"
swash = "0.1.4"
euclid = "0.22.6"

[features]

[profile.dev.package."*"]
opt-level = 2
