[package]
name = "temu-window"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.1"
log = "0.4.14"
raw-window-handle = "0.3.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.24"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(unix)'.dependencies]
wayland-client = { version = "0.29.1", default-features = false, features = ["use_system_lib"] }
wayland-egl = "0.29.1"
wayland-protocols = { version = "0.29.1", features = ["client", "unstable_protocols"] }
